fix typo in a config file

--- a/server-syslog/Dockerfile
+++ b/server-syslog/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:latest
-RUN apk add --no-cache rsyslog logrotate tzdata
+RUN apk add --no-cache rsyslog logrotate tzdata curl
 EXPOSE 514/tcp 514/udp
 RUN mkdir -p /etc/rsyslog.d
 CMD ["rsyslogd", "-n"]
