--- a/server-syslog/etc/rsyslog.d/20.logs.conf
+++ b/server-syslog/etc/rsyslog.d/20.logs.conf
@@ -1,5 +1,5 @@
 template (name="default_fmt" type="string" string="%rawmsg%\n")
-template (name="log_file" type="string" string="/var/log/remote_logs/%$!from%/%$YEAR%%$MONTH%%$DAY%_%$!logtag%.log")
+template (name="log_file" type="string" string="/var/log/remote-logs/%$!from%/%$YEAR%%$MONTH%%$DAY%_%$!logtag%.log")
 
 ruleset(name="LogsProcessing") {
 
